--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -8,6 +8,11 @@
     display: flex;
     align-items: center;
     padding-bottom: 100px;
+    margin: 64px 0;
+    
+    @media only screen and (min-width: $sm) {
+      margin: initial;
+    }
 
     .section-title {
       font-size: 64px;
@@ -24,9 +29,14 @@
 
   .background {
     position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     height: 100%;
+    max-height: 100vh;
     width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
     justify-content: center;
 
     img {
